2008-10-21  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: Add new option --with-pkgversion,
	substitute PKGVERSION and DIST_ID.
	* Makefile.am (ICEDTEA_ENV): Add DISTRIBUTION_ID;
	(stamps/patch.stamp): Encode PKGVERSION in IcedTea version.
	* patches/icedtea-version.patch: Add DISTRIBUTION_ID in vm crash report.

2008-10-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* HACKING: Add new patch.
	* Makefile.am: Compile PulseAudio Java
	files with debugging information.
	* patches/icedtea-ecj.patch: Regenerated.
	* patches/icedtea-javac-debuginfo.patch:
	Ensure JAXWS, JAXP, CORBA and the language
	tools include debugging information.

2008-10-20  Lillian Angel  <langel@redhat.com>

	* Makefile.am
	(EXTRA_DIST): Added plugin dir.

2008-10-20  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Changed all instances of $(srcdir) to
	$(abs_top_srcdir).

2008-10-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Use GCJ if not equal to no instead
	of being empty.
	* acinclude.m4:
	(AC_CHECK_WITH_GCJ): New macro.
	* configure.ac:
	Use AC_CHECK_WITH_GCJ in preference to
	just checking for GCJ.

2008-10-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Build native ecj for ecj builds when
	gcj is available.
	* acinclude.m4:
	Make configure output more explicit and readable.
	* configure.ac:
	Check for gcj, and make output more explicit
	and readable.
	* javac.in: Use native ecj when available.

2008-10-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Fix LiveConnect and PulseAudio paths to work
	when srcdir != builddir.

2008-10-20  Alon Bar-Lev  <alon.barlev@gmail.com>

	PR icedtea/224:
	* configure.ac:
	Correct use of --enable options.
	
2008-10-19  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (jtregcheck): Cleanup processes.

2008-10-19  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-cacao-ignore-jdi-tests.patch: Ignore jdi tests,
	not yet implemented in cacao.